# lrcup

./: Cargo.toml  README.md
src/: challenge.rs  main.rs
