[package]
name = "lrcup"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
data-encoding = "2.9.0"
reqwest = { version = "0.12.20", features = ["json"] }
ring = "0.17.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
