[package]
name = "lrcup"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
crossbeam-utils = "0.8.21"
data-encoding = "2.9.0"
num_cpus = "1.17.0"
parking_lot = "0.12.4"
reqwest = { version = "0.12.20", features = ["json"] }
ring = "0.17.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
